// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`caching fetches latest fetch from urls 1`] = `
Array [
  Object {
    "_cursor": Array [
      1485907200000,
    ],
    "_score": null,
    "canonical": "http://example.com/article/1111",
    "fetchedAt": "2017-02-01T00:00:00.000Z",
    "fromUrlsCache": true,
    "highlight": undefined,
    "id": "someUrl-2nd-fetch",
    "inner_hits": undefined,
    "normalizedUrl": "http://example.com/article/1111-aaaaa-bbb-ccc",
    "summary": "Changed summary",
    "title": "Changed title",
    "url": "http://example.com/article/1111-aaaaa-bbb-ccc",
  },
  Object {
    "_cursor": Array [
      1485907200000,
    ],
    "_score": null,
    "canonical": "http://example.com/article/1111",
    "fetchedAt": "2017-02-01T00:00:00.000Z",
    "fromUrlsCache": true,
    "highlight": undefined,
    "id": "someUrl-2nd-fetch",
    "inner_hits": undefined,
    "normalizedUrl": "http://example.com/article/1111",
    "summary": "Changed summary",
    "title": "Changed title",
    "url": "http://example.com/article/1111",
  },
]
`;

exports[`scrapping & storage scraps from Internet and handles error: Docs stored to urls index 1`] = `
Array [
  Object {
    "canonical": "http://example.com/index.html",
    "fetchedAt": "2017-01-28T08:45:57.011Z",
    "html": "<html><head></head><body>Hello world</body></html>",
    "status": 200,
    "summary": "Some text as summary",
    "title": "Some title",
    "topImageUrl": "",
    "url": "http://example.com/index.html",
  },
  Object {
    "canonical": "http://example.com/not-found",
    "fetchedAt": "2017-01-28T08:45:57.011Z",
    "html": "<html><head></head><body>Not Found</body></html>",
    "status": 404,
    "summary": "Not Found",
    "title": "",
    "topImageUrl": "",
    "url": "http://example.com/not-found",
  },
]
`;

exports[`scrapping & storage scraps from Internet and handles error: GraphQL requests 1`] = `
Array [
  Array [
    "http://example.com/index.html",
    "http://example.com/not-found",
  ],
]
`;

exports[`scrapping & storage scraps from Internet and handles error: foundResult 1`] = `
Object {
  "canonical": "http://example.com/index.html",
  "html": "<html><head></head><body>Hello world</body></html>",
  "normalizedUrl": "http://example.com/index.html",
  "status": 200,
  "summary": "Some text as summary",
  "title": "Some title",
  "topImageUrl": "",
  "url": "http://example.com/index.html",
}
`;

exports[`scrapping & storage scraps from Internet and handles error: notFoundResult 1`] = `
Object {
  "canonical": "http://example.com/not-found",
  "html": "<html><head></head><body>Not Found</body></html>",
  "normalizedUrl": "http://example.com/not-found",
  "status": 404,
  "summary": "Not Found",
  "title": "",
  "topImageUrl": "",
  "url": "http://example.com/not-found",
}
`;
